2014-01-30  Marek Polacek  <polacek@redhat.com>

	* gcc.dg/Wconversion-real-integer.c: Properly end comment.

2014-01-30  David Holsgrove <david.holsgrove@xilinx.com>

	* gcc.target/microblaze/isa/fcmp4.c: New.

2014-01-30  Marek Polacek  <polacek@redhat.com>

	PR c/59940
	* gcc.dg/pr59940.c: New test.
	* gcc.dg/pr35635.c (func3): Move dg-warning.

2014-01-30  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/59903
	* gcc.dg/torture/pr59903.c: New testcase.

2014-01-30  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/58843
	* g++.dg/lookup/crash8.C: New.

2014-01-30  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/58649
	* g++.dg/template/crash117.C: New.

2014-01-30  Richard Biener  <rguenther@suse.de>

	PR c/59905
	* gcc.dg/cast-function-1.c: Adjust to survive DCE.
	* gcc.dg/call-diag-2.c: Remove expected warnings about calling
	abort.
	* gcc.dg/invalid-call-1.c: Likewise.

2014-01-29  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/58561
	* g++.dg/cpp1y/auto-fn23.C: New.

2014-01-29  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/58846
	* g++.dg/init/dso_handle2.C: New.

2014-01-29  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/58674
	* g++.dg/cpp0x/pr58674.C: New.

2014-01-28  Kirill Yukhin  <kirill.yukhin@intel.com>

        PR target/59617
	* gcc.target/i386/avx512f-gather-2.c: Remove XPASS.
	* gcc.target/i386/avx512f-gather-5.c: Ditto.

2014-01-29  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	* gcc.dg/vmx/merge-be-order.c: New.
	* gcc.dg/vmx/merge.c: New.
	* gcc.dg/vmx/merge-vsx-be-order.c: New.
	* gcc.dg/vmx/merge-vsx.c: New.

2014-01-29  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/58742
	* gcc.dg/pr58742-1.c: New testcase.
	* gcc.dg/pr58742-2.c: Likewise.
	* gcc.dg/pr58742-3.c: Likewise.

2014-01-29  Renlin Li  <Renlin.Li@arm.com>

	* gcc.target/arm/ftest-armv7ve-arm.c: New.
	* gcc.target/arm/ftest-armv7ve-thumb.c: New.
	* lib/target-supports.exp: New armfunc, armflag and armdef for armv7ve.
