@@ -1,3 +1,10 @@
+2014-01-30  Richard Sandiford  <rdsandiford@googlemail.com>
+
+	* g++.dg/vect/pr33426-ivdep.cc, g++.dg/vect/pr33426-ivdep-2.cc,
+	g++.dg/vect/pr33426-ivdep-3.cc, g++.dg/vect/pr33426-ivdep-4.cc,
+	gcc.dg/vect/vect-ivdep-1.c, gcc.dg/vect/vect-ivdep-2.c: Require
+	vect_int rather than vect_float.
+
 2014-01-30  Marek Polacek  <polacek@redhat.com>
 
 	* gcc.dg/Wconversion-real-integer.c: Properly end comment.
